# BlobFin

./: .gitignore  Design.md  README.md
backend/: requirements.txt
backend/app/: main.py
docs/: Jahresnettoeinkommen.html  index.md
docs/DEF/: DEF.md  README.md  architecture.md  backend.md  domain-model.md  frontend.md  testing.md  tooling.md
docs/USR/: README.md  USR.md  data-export-reset.md  getting-started.md  investment-planning.md  reserve-planning.md
docs/def/: architecture.md  backend.md  def.md  domain-model.md  frontend.md  testing.md  tooling.md
docs/dev/: business-canvas-editor-requirements.md  dev.md
docs/tools/: build.md  doctor.md  install.md  logging.md  run-stop.md  test.md  tools.md
docs/usr/: README.md  data-export-reset.md  getting-started.md  investment-planning.md  real-estate-field-ids.md  reserve-planning.md  usr.md
frontend/: anlageentwicklung_grafik_html.html  index.html  jahreskalkulator_ruecklagen.html  package-lock.json  package.json
frontend/src/: main.ts  styles.css  types.ts
shared/: question-flow.json
shared/examples/: invalid.json  valid.json
shared/legal/: privacy-policy.json
shared/schema/: input.schema.json  report.schema.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tools/: __init__.py  control.py  logger.py
tools/.runtime/: run_state.json  tauri_run_state.json
tools/inst/: __init__.py  build.py  console.py  doctor.py  install.py  report.py  run.py  run_test.py  stop.py
tools/tauri/: common.py  control.py  (+6 more)
(+262 files in other folders)
