[package]
name = "blobfin"
version = "0.1.0"
description = "BlobFin desktop application"
authors = ["BlobFin"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
